# rust-bert-docker

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  build-and-deploy.sh  build.sh  cpu.Dockerfile  docker-build.sh  docker-run.sh  errors.m1.md  gpu.Dockerfile  run.sh
src/: main.rs
src/controller/: haaskme.rs  health_check.rs  mod.rs
src/env/: env.rs
src/middleware/: cors.rs
src/service/: haaskme.rs  mod.rs
